# PasteCleaner

./: .gitignore  LICENSE  README.md  pyproject.toml
contrib/: com.pastecleaner.watch.plist
pastecleaner/: __main__.py  cli.py  watch.py
tests/: test_clean.py  test_watch.py
